Added Jquery and made server.js accept posted data from /ajaxmessage route.

--- a/templates/newmessage.pug
+++ b/templates/newmessage.pug
@@ -11,11 +11,11 @@ html
                 div.col-md-12.box
                     div.row
                         div.col-md-12
-                            input(placeholder="Name").form-control
-                            input(placeholder="Country").form-control
-                            input(placeholder="Message").form-control
+                            input(placeholder="Name" id="name").form-control
+                            input(placeholder="Country" id="country").form-control
+                            input(placeholder="Message" id="message").form-control
 
                         div.col-md-12
-                            button.btn.btn-success Send
+                            button.btn.btn-success#submit-ajax Send
                     
                     
