Added alert box for errors or success into newmessage page.

--- a/templates/newmessage.pug
+++ b/templates/newmessage.pug
@@ -10,6 +10,9 @@ html
                 
                 div.col-md-12.box
                     div.row
+
+                        div(class="alert hide" role="alert")#alertbox aaaa
+
                         div.col-md-12
                             input(placeholder="Name" id="name").form-control
                             input(placeholder="Country" id="country").form-control
